- Updated FileUpload to version 1.2.1.         - Updated JavaMail to version 1.4.2.         - Updated JAXB RI to version 2.1.12.         - Updated JSON library to version from 2009/08/16.         - Updated Lucene to version 2.4.1.         - Updated Tika to version 0.4.         - Updated OAuth library to version from 2009/06/17.         - Updated Velocity to version 1.6.2.